[project]
name = "dreamy-veil"
version = "0.1.0"
description = "Empirical analysis of monetary policy transmission with scenario predictions and visualisations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fredapi>=0.5.2",
    "hydra-core>=1.3.2",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.0",
    "pandas>=2.2.3",
    "plotly-express>=0.4.1",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "yfinance>=1.0",
]
